--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,18 @@
   <meta charset="utf-8">
   <title>Gameplay</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <!-- Bootstrap icons-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+  <!-- Core theme CSS (includes Bootstrap)-->
+  <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
   <app-root></app-root>
+  <!-- Bootstrap core JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
